--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.3",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
@@ -25,9 +25,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "@eslint/eslintrc": "^3.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.0",
     "vitest": "^1.2.2"
