--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "@eslint/eslintrc": "^3.0.0",
+    "eslint": "^9.0.0-alpha.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.0",
     "vitest": "^1.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 } 
