--- a/spanive/package.json
+++ b/spanive/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm install && ./node_modules/.bin/vite build",
+    "build": "npm install && npm install -g vite && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
