--- a/spanive/package.json
+++ b/spanive/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
