--- a/spanive/package.json
+++ b/spanive/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.17.0",
+    "npm": "9.6.7"
   },
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
