--- a/spanive/netlify.toml
+++ b/spanive/netlify.toml
@@ -13,6 +13,21 @@
   status = 200
 
 [[headers]]
+  for = "/*.js"
+  [headers.values]
+    Content-Type = "application/javascript"
+
+[[headers]]
+  for = "/*.mjs"
+  [headers.values]
+    Content-Type = "application/javascript"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Content-Type = "text/css"
+
+[[headers]]
   for = "/*"
   [headers.values]
     X-Frame-Options = "DENY"
