--- a/spanive/package.json
+++ b/spanive/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
