--- a/spanive/package.json
+++ b/spanive/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build --mode production",
+    "preview": "vite preview",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -23,5 +24,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.3.3",
     "vite": "^5.4.19"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
