--- a/spanive/package.json
+++ b/spanive/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode production",
+    "clean": "rimraf dist",
+    "build": "npm run clean && vite build --mode production",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "rimraf": "^5.0.5",
     "terser": "^5.29.2",
     "typescript": "^5.3.3",
     "vite": "^5.4.19"
